fix: don't align sidebar text to the right
it doesn't work with indentation

--- a/src/asset/mmdoc.css
+++ b/src/asset/mmdoc.css
@@ -168,7 +168,6 @@ nav.sidebar {
   padding-right: 20px;
   border-right: 1px solid var(--light-gray);
   background-color: var(--lightest-gray);
-  text-align: right;
 }
 
 nav ul ul {
